--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 	<div class = "wrapper portfolio-wrapper">
 		<h1>OUR PORTFOLIO</h1>
 		<div class = "container portfolio-container">
-			<a class = "modus-portfolio portfolio-item" href ="http://www.modusnutrition.com">
+			<a class = "modus-portfolio portfolio-item">
 				<img class = "show" src = "images/modus-logo.png">
 			</a>
 			<a class = "pon-portfolio portfolio-item" href = "http://www.poweronpoweroff.com">
-				<img src = "images/pon-logo.png">
+				<img src = "images/pon-poff.png">
 			</a>
-			<a class = "poff-portfolio portfolio-item" href = "http://www.poweronpoweroff.com">
-				<img src = "images/poff-logo.png">
+			<a class = "celiac-portfolio portfolio-item" href = "celiac.html">
+				<img src = "images/vitalere-celiac-logo.png">
 			</a>
 		</div>
 	</div>
@@ -98,10 +98,10 @@
 			<img src = "images/robert.png">
 			<div class = "team-module-right">
 				<h3>Dr. Robert Pastore</h3>
-				<h4>FOUNDER &amp; CHIEF SCIENCE OFFICER</h4>
-				<p>Dr. Robert Pastore is a scientist in the fields of nutrition, biochemistry, nutrigenomics, bioinformatics, and nanomedicine. His professional memberships include the American Society for Nutrition and the American College of Nutrition. As Chief Science Officer, Dr. Pastore leads the R&amp;D and product development function of Vitalere.</p>
+				<h4>FOUNDER &amp; CHIEF EXECUTIVE OFFICER</h4>
+				<p>Dr. Robert Pastore has a vast educational background with many diverse subjects. His undergraduate education encompassed organic chemistry, biochemistry, neuroscience, human nutrition and genetics. He completed his graduate education at Eastern Michigan University, majoring in human nutrition with extensive study of biochemistry and genomics, and a PhD from Rutgers University in biomedical informatics, nanomedicine and clinical informatics. He is a Certified Nutrition Specialist (CNS), a member of the American Academy of Neurology, the American Society for Nutrition, the American College of Nutrition, the Honor Society Phi Kappa Phi, and Alpha Chi Chapter of Alpha Epsilon Lambda at Rutgers Biomedical and Health Sciences.</p>
 				<p>Dr. Pastore is a Certified Nutrition Specialist (CNS). His private practice had the distinction of counseling some of the world’s greatest professional athletes from the MLB, NFL, NHL and the world of endurance sports, including professional cycling as well as Ironman competitors and marathon runners. During this period, he frequently lectured and counseled CEOs and other top executives of many Fortune 500 and Forbes List companies. He retired from private practice in late 2013 to start Vitalere. In addition to his history in practice, he is a proven health product inventor, having commercialized several products and co-founded several companies.</p>
-			</div>
+				 </div>
 		</div>
 		<div class = "team-module">
 			<img src = "images/raymond-stone.jpg">
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 		<div class = "team-module">
-			<img src = "images/grey.png">
+			<img src = "images/danielle-thorsen.jpg">
 			<div class = "team-module-right">
 				<h3>Danielle Thorsen</h3>
 				<h4>DIRECTOR</h4>
@@ -144,7 +144,7 @@
 
 
 	<footer>
-		<small>&copy; 2017 VITALERE INC. ALL RIGHTS RESERVED.</small>
+		<small>&copy; 2015 - 2019 VITALERE INC. ALL RIGHTS RESERVED.</small>
 	</footer>
 </body>
 
